kubernetes/CKAD/services-and-networking/netw-policy/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run busybox /bin/sh -c sleep 3600 --image=busybox
      --dry-run=true --output=yaml --restart=Never --record=true
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
