kubernetes/CKAD/services-and-networking/netw-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: secure-app
  policyTypes:
  - Ingress

  ingress:
  - from:
#    - ipBlock:
#        cidr: 10.16.0.0/24
#        except:
#        - 10.16.0.12/32
#    - namespaceSelector:
#        matchLabels:
#          project: myproject
    - podSelector:
        matchLabels:
          allow-access: "true"
    ports:
    - protocol: TCP
      port: 80
